// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on MARK_ACTIVITY_READ_PENDING marks the activity read 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Activity",
      "itemsById",
      "2",
      "unread",
    ],
    "rhs": false,
  },
]
`;

exports[`on MARK_ALL_ACTIVITIES_READ_PENDING marks the activity read 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Activity",
      "itemsById",
      "1",
      "unread",
    ],
    "rhs": false,
  },
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Activity",
      "itemsById",
      "2",
      "unread",
    ],
    "rhs": false,
  },
]
`;

exports[`on TOGGLE_GROUP_TOPIC_SUBSCRIBE_PENDING will set isSubscribed to false and decrement followersTotal 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 10,
    "path": Array [
      "GroupTopic",
      "itemsById",
      "1",
      "followersTotal",
    ],
    "rhs": 9,
  },
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "GroupTopic",
      "itemsById",
      "1",
      "isSubscribed",
    ],
    "rhs": false,
  },
]
`;

exports[`on TOGGLE_GROUP_TOPIC_SUBSCRIBE_PENDING will set isSubscribed to true and increment followersTotal 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 10,
    "path": Array [
      "GroupTopic",
      "itemsById",
      "1",
      "followersTotal",
    ],
    "rhs": 11,
  },
  DiffNew {
    "kind": "N",
    "path": Array [
      "GroupTopic",
      "itemsById",
      "1",
      "isSubscribed",
    ],
    "rhs": true,
  },
]
`;
